[tool.poetry]
name = "blister-config-extractor"
version = "0.1.0"
description = "Python script to extract the configuration and payload from Blister samples."
authors = ["Salim Bitam <salim.bitam@elastic.co>"]
readme = "README.md"
packages = [{ include = "elastic" }]

[tool.poetry.scripts]
blister-config-extractor = 'elastic.blister_config_extractor.blister_config_extractor:main'

[tool.poetry.dependencies]
python = "^3.9"
pefile = "^2019.4.18"
yara-python = "^4.2.0"
malduck = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-isort = "^3.0"
pytest-flake8 = "^1.0"
pytest-black = "^0.3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--black --isort --flake8"
testpaths = ["."]
flake8-max-line-length = 89
flake8-ignore = "E203 E266 E501 W503"

[tool.pyright]
include = ["blister_config_extractor"]
exclude = ["**/__pycache__"]
