[tool.poetry]
name        = "elastic.bpfdoor_extractor"
version     = "1.0.0"
description = "BPFDoor Config Extractor"
authors     = ["Elastic Security (MARE) <user@example.com>"]
license     = "Apache-2.0"
readme      = "README.md"
packages    = [{ include = "elastic" }]
classifiers = ["Development Status :: 4 - Beta"]

[tool.poetry.dependencies]
python = "^3.10"
capstone = "^5.0.0"
lief = "^0.12.0"
colorama = "^0.4.0"
unicorn = "^1.0.3"


[tool.poetry.scripts]
"bpfdoor-extractor" = "elastic.bpfdoor_extractor.bpfdoor_config_extractor:main"

[tool.poetry.dev-dependencies]
pytest        = "^6.0"
pytest-isort  = "^3.0"
pytest-flake8 = "^1.0"
pytest-black  = "^0.3.12"
mypy          = "^0.950"
mock          = "^4.0.3"
types-mock    = "^4.0.13"
safety        = ">=1.10.3"


[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict              = true
warn_unreachable    = true
pretty              = true
show_column_numbers = true
show_error_codes    = true
show_error_context  = true


[tool.pytest.ini_options]
minversion             = "6.0"
addopts                = "--black --isort --flake8"
testpaths              = ["."]
norecursedirs          = "ecs"
flake8-max-line-length = 88
flake8-ignore          = "E203 E266 E501 W503"


[tool.pyright]
include = ["elastic", "tests"]
exclude = ["**/__pycache__"]
