[tool.poetry]
name        = "bpfdoor-scanner"
version     = "1.0.0"
description = "Python script to identify hosts infected with the BPFDoor malware."
authors     = ["Alex Bell <alex.bell@elastic.co>", "Derek Ditch <dcode@users.noreply.github.com>"]
readme      = "README.md"
packages    = [{ include = "elastic" }]

[tool.poetry.scripts]
bpfdoor-scanner = 'elastic.bpfdoor_scanner.bpfdoor_scanner:run'

[tool.poetry.dependencies]
python    = "^3.9"
scapy     = "^2.4.5"
typer     = "^0.4.1"
pyprctl   = { version = "^0.1.3", platform = "linux" }
netifaces = "^0.11.0"

[tool.poetry.dev-dependencies]
pytest        = "^6.0"
pytest-isort  = "^3.0"
pytest-flake8 = "^1.0"
pytest-black  = "^0.3.12"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"


[tool.pytest.ini_options]
minversion             = "6.0"
addopts                = "--black --isort --flake8"
testpaths              = ["."]
flake8-max-line-length = 89
flake8-ignore          = "E203 E266 E501 W503"

[tool.pyright]
include = ["elastic"]
exclude = ["**/__pycache__"]
